--- a/register.html
+++ b/register.html
@@ -77,7 +77,7 @@
           </h2>
           <hr>
           <h2>
-          <a href="PROGRAM.HTML">Home</a> <a href="https://www.instagram.com/aizen.ai_?igsh=bTN4bDN0Y2MycXp4">instagram</a> <a href="https://aizen-srec.in/#!/">original form</a>
+          <a href="program.html">Home</a> <a href="https://www.instagram.com/aizen.ai_?igsh=bTN4bDN0Y2MycXp4">instagram</a> <a href="https://aizen-srec.in/#!/">original form</a>
           </h2>
     </center>
 </body>
